shrink default text size

--- a/SegmentedSlider.css
+++ b/SegmentedSlider.css
@@ -1,5 +1,6 @@
 div.slider {
 	font-family: Lucida Grande;
+	font-size: 0.8em;
 	color: rgb(50, 50, 50);
 	text-shadow: rgba(255, 255, 255, 0.50) 0px 1px 1px;
 	-moz-text-shadow: rgba(255, 255, 255, 0.50) 0px 1px 1px;
